# docxcompose

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  Dockerfile  HISTORY.txt  MANIFEST.in  README.rst  compose.yaml  composed.docx  docker-bake.hcl  pyproject.toml  requirements-test.txt  setup.cfg  setup.py  towncrier.md  tox.ini
.github/: pull_request_template.md
.github/workflows/: build-publish.yml  build_image.yml  tests.yml
changes/: dependencies.bugfix  fix_pkg_resources.bugfix  lxml.bugfix  perserve-styles.feature  preserve-styles-retain-formattings.feature  project_setup.other  python310.other  six-removal.other  web-service.feature
docxcompose/: command.py  composer.py  properties.py  sdt.py  server.py  utils.py
docxcompose/templates/: comments.xml  commentsExtended.xml  endnotes.xml
docxmerge/: builder.py
tests/: conftest.py  test_command.py  test_comments.py  test_content_controls.py  test_embedded_excel.py  test_fields.py  test_footnotes.py  test_header.py  test_hyperlinks.py  test_images.py  test_numberings.py  test_properties.py  test_section.py  test_server.py  test_shapes.py  test_smartart.py  test_styles.py  test_table.py  test_url.py  test_utils.py  utils.py
tests/docs/: aatmay.docx  broken_listing.docx  broken_listing_many.docx  broken_listing_nested.docx  comments.docx  common_stylename_different_id1.docx  common_stylename_different_id2.docx  complex_field_with_split_fieldname.docx  complex_field_without_separate.docx  composed.docx  content_controls.docx  content_controls_multiline_formatted.docx  continous_section_break.docx  custom_list_style.docx  date_docproperties_with_format.docx  docproperties.docx  docproperties_different_first_page_1_section.docx  docproperties_different_odd_even_pages_1_section.docx  docproperties_footer.docx  docproperties_header.docx  docproperties_header_footer_3_sections.docx  docproperties_shared_footer_2_sections.docx  docproperties_shared_header_2_sections.docx  docproperties_shared_header_footer_2_sections.docx  embedded_and_external_image.docx  embedded_excel_chart.docx  embedded_visio.docx  fail_duplicate_list.docx  footnote.docx  footnotes_with_hyperlinks.docx  header_footer.docx  header_footer_sections.docx  header_with_image.docx  hyperlinks.docx  image.docx  images.docx  legacy_empty.docx  master.docx  master_header_footer.docx  master_switched_listing_style.docx  (+24 more)
tests/docs/composed_fixture/: broken_listing.docx  broken_listing_many.docx  broken_listing_nested.docx  comments.docx  common_stylename_different_id.docx  content_controls.docx  content_controls_multiline_formatted.docx  continous_odd_section_break.docx  continous_section_break.docx  embedded_and_external_image.docx  embedded_excel_chart.docx  embedded_visio.docx  footnote.docx  footnotes_with_hyperlinks.docx  header_footer.docx  header_footer_sections.docx  hyperlinks.docx  images.docx  master_header_footer_with_sections.docx  next_page_section_break.docx  next_page_section_break_empty.docx  numbering_reference_to_numbering_zero.docx  numbering_with_paragraphs_in_between.docx  numberings.docx  numberings_restart.docx  numberings_styles.docx  renumbering_nv_props.docx  smart_art.docx  styles_de.docx  styles_default.docx  styles_en.docx  styles_preserve.docx  switched_listing_style.docx  table.docx  url.docx
