[project]
name = "docxcompose"
version = "2.1.0.dev0"
description = "Compose .docx documents"
authors = [{name="Thomas Buchberger", email="<t.buchberger@4teamwork.ch>"}]
license = "MIT license"
readme = "README.rst"
requires-python = ">=3.12,<4.0"
dependencies = [
	"babel (>=2.10.0)",
	"lxml",
	"python-docx (>=1.0.0)",
	"six",
]

[project.optional-dependencies]
dev = [
	"black (>=25.1.0)",
	"flake8 (>=7.3.0,<8.0.0)",
	"isort (>=6.0.1,<7.0.0)",
	"pytest (>=9.0.2,<10.0.0)",
	"pytest-aiohttp",
	"towncrier (>=25.8.0)",
	"zest-releaser (>=9.6.2,<10.0.0)",
	"zestreleaser-towncrier (>=1.3.0,<2.0.0)",
]
server = [
	"aiohttp (>=3.13.0)",
]

[project.scripts]
docxcompose = "docxcompose.command:main"
docxcompose-server = "docxcompose.server:main"

[tool.poetry]
packages = [{include = "docxcompose"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
force_alphabetical_sort_within_sections = true
force_single_line = true
from_first = false
line_length = 200
known_first_party = "docxcompose"
lines_after_imports = 2

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = "tests"
asyncio_mode = "auto"

[tool.towncrier]
package = "docxcompose"
directory = "changes"
template = "towncrier.md"
filename = "CHANGELOG.md"
underlines = ["-", ""]

[[tool.towncrier.type]]
directory = "feature"
name = "New features:"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug fixes:"
showcontent = true

[[tool.towncrier.type]]
directory = "other"
name = "Other changes:"
showcontent = true

[tool.zest-releaser]
release = "false"
history-file = "CHANGELOG.md"
