[project]
name = "docxcompose"
version = "2.1.0"
description = "Compose .docx documents"
authors = [{name="Thomas Buchberger", email="<t.buchberger@4teamwork.ch>"}]
license = "MIT license"
readme = "README.rst"
requires-python = ">=3.10,<4.0"
dependencies = [
	"babel (>=2.10.0)",
	"lxml",
	"python-docx (>=1.0.0)",
]

[project.optional-dependencies]
dev = [
	"pytest (>=9.0.2,<10.0.0)",
	"pytest-aiohttp",
	"ruff (>=0.15.0)",
	"towncrier (>=25.8.0)",
	"zest-releaser (>=9.6.2,<10.0.0)",
	"zestreleaser-towncrier (>=1.3.0,<2.0.0)",
]
server = [
	"aiohttp (>=3.13.0)",
]

[project.scripts]
docxcompose = "docxcompose.command:main"
docxcompose-server = "docxcompose.server:main"

[tool.poetry]
packages = [{include = "docxcompose"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I"]
ignore = ["B904", "B905"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.ruff.lint.isort]
force-single-line = true
from-first = false
known-first-party = ["docxcompose"]
lines-after-imports = 2
order-by-type = false

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = "tests"
asyncio_mode = "auto"

[tool.towncrier]
package = "docxcompose"
directory = "changes"
template = "towncrier.md"
filename = "CHANGELOG.md"
underlines = ["-", ""]

[[tool.towncrier.type]]
directory = "feature"
name = "New features:"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug fixes:"
showcontent = true

[[tool.towncrier.type]]
directory = "other"
name = "Other changes:"
showcontent = true

[tool.zest-releaser]
release = "false"
history-file = "CHANGELOG.md"
